--- a/dot_config/kitty/private_kitty.conf.tmpl
+++ b/dot_config/kitty/private_kitty.conf.tmpl
@@ -13,7 +13,8 @@ wayland_titlebar_color background
 # BEGIN_KITTY_SHELL
 {{ if eq .chezmoi.os "darwin" -}}
 shell /opt/homebrew/bin/fish
-{{ else -}}
+{{ end -}}
+{{ if eq .chezmoi.os "linux" -}}
 shell fish
 {{ end -}}
 # END_KITTY_SHELL
@@ -39,7 +40,8 @@ remember_window_size  no
 {{- if eq .chezmoi.os "linux" }}
 initial_window_width  150c
 initial_window_height 45c
-{{- else }}
+{{- end }}
+{{- if eq .chezmoi.os "darwin" }}
 initial_window_width  128c
 initial_window_height 35c
 {{- end }}
