--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -28,6 +28,12 @@ set -gx MLFLOW_TRACKING_URI 'http://localhost:8000'
 {{- if eq .chezmoi.os "darwin" }}
 set -gx HOMEBREW_INSTALL_FROM_API 1
 {{- end }}
+{{- if eq .chezmoi.os "linux" }}
+set -gx GOPATH /projects/go
+{{- end}}
+{{- if eq .chezmoi.os "darwin" }}
+set -gx GOPATH $HOME/Projects/go
+{{- end}}
 set -U fish_greeting
 
 
@@ -38,7 +44,8 @@ if test -f /home/fissium/tools/mambaforge/bin/conda
     eval /home/fissium/tools/mambaforge/bin/conda "shell.fish" "hook" $argv | source
 end
 # <<< conda initialize <<<
-{{- else }}
+{{- end}}
+{{- if eq .chezmoi.os "darwin" }}
 # >>> conda initialize >>>
 # !! Contents within this block are managed by 'conda init' !!
 if test -f /Users/fissium/tools/mambaforge/bin/conda
@@ -53,7 +60,8 @@ end
 starship init fish | source
 # Install zoxide
 zoxide init fish | source
-{{- else }}
+{{- end }}
+{{- if eq .chezmoi.os "darwin" }}
 # Install Starship
 /opt/homebrew/bin/starship init fish | source
 # Install zoxide
