Update .condarc Add .config/fish/completions/pdm.fish Update .config/fish/functions/up.fish

--- a/dot_condarc.tmpl
+++ b/dot_condarc.tmpl
@@ -2,3 +2,7 @@ channels:
   - conda-forge
 auto_activate_base: false
 env_prompt: ''
+{{ if eq .chezmoi.os "linux" }}
+pkgs_dirs:
+    - /data/.cache/conda/pkgs
+{{ end }}
