Add .bashrc Update .config/fish/config.fish

--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -36,6 +36,9 @@ set -gx GOPATH $HOME/Projects/go
 {{- end}}
 {{- if eq .chezmoi.os "linux" }}
 set -gx PIP_CACHE_DIR /data/.cache/pip
+set -gx HF_HOME /data/.cache/huggingface
+set -gx HUGGINGFACE_HUB_CACHE /data/.cache/huggingface/hub
+set -gx HUGGINGFACE_ASSETS_CACHE /data/.cache/huggingface/assets
 {{- end }}
 set -U fish_greeting
 
