ignore .bashrc for MacOS

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -3,5 +3,6 @@
 .config/fish/functions/up.fish
 .config/fish/functions/wg-down.fish
 .config/fish/functions/wg-up.fish
+.bashrc
 {{ end }}
 README.md
