--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -37,8 +37,7 @@ set -gx GOPATH $HOME/Projects/go
 {{- if eq .chezmoi.os "linux" }}
 set -gx PIP_CACHE_DIR /data/.cache/pip
 set -gx HF_HOME /data/.cache/huggingface
-set -gx HUGGINGFACE_HUB_CACHE /data/.cache/huggingface/hub
-set -gx HUGGINGFACE_ASSETS_CACHE /data/.cache/huggingface/assets
+set -gx TORCH_HOME /data/.cache/torch
 {{- end }}
 set -U fish_greeting
 
