Add EasyORC env var

--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -37,6 +37,7 @@ set -gx GOPATH $HOME/Projects/go
 set -gx PIP_CACHE_DIR /data/.cache/pip
 set -gx HF_HOME /data/.cache/huggingface
 set -gx TORCH_HOME /data/.cache/torch
+set -gx EASYOCR_MODULE_PATH /data/.cache/EasyOCR
 {{- end }}
 set -U fish_greeting
 
