--- a/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
@@ -15,8 +15,10 @@ local sources = {
   b.code_actions.shellcheck,
   -- YAML
   b.formatting.prettierd,
+  {{- if eq .chezmoi.os "linux" }}
   -- Docker
   b.diagnostics.hadolint,
+  {{- end }}
   -- Go
   b.formatting.goimports,
   b.formatting.gofumpt,
