Add setting to ruff and pyright, enable nvdash

--- a/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
@@ -16,6 +16,7 @@ M.treesitter = {
     "yaml",
     "json",
     "jsonc",
+    "bash",
   },
   indent = {
     enable = true,
@@ -35,6 +36,8 @@ M.mason = {
     -- python stuff
     "pyright",
     "ruff_lsp",
+    "black",
+    "reorder_python_imports",
 
     -- bash stuff
     "bash-language-server",
