--- a/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
@@ -5,8 +5,6 @@ local lspconfig = require "lspconfig"
 
 -- if you just want default config for the servers then put them in a table
 local servers = {
-  "ruff_lsp",
-  "pyright",
   "gopls",
   "yamlls",
   {{- if eq .chezmoi.os "linux" }}
@@ -23,5 +21,28 @@ for _, lsp in ipairs(servers) do
   }
 end
 
---
--- lspconfig.pyright.setup { blabla}
+-- ruff_lsp
+lspconfig.ruff_lsp.setup {
+  capabilities = capabilities,
+  on_attach = on_attach,
+  init_options = {
+    settings = {
+      -- Any extra CLI arguments for `ruff` go here.
+      lint = {
+        args = {
+          "--select=ARG",
+          "--select=ANN",
+          "--select=F",
+          "--select=E",
+        },
+      },
+    },
+  },
+}
+
+-- pyright
+capabilities.textDocument.publishDiagnostics.tagSupport.valueSet = { 2 }
+lspconfig.pyright.setup {
+  capabilities = capabilities,
+  on_attach = on_attach,
+}
