Dsiable signature as typing, add libmamba solver

--- a/dot_condarc.tmpl
+++ b/dot_condarc.tmpl
@@ -4,5 +4,7 @@ auto_activate_base: false
 env_prompt: ''
 {{ if eq .chezmoi.os "linux" }}
 pkgs_dirs:
-    - /data/.cache/conda/pkgs
-{{ end }}
+  - /data/.cache/conda/pkgs
+
+solver: libmamba
+{{- end }}
