Format fish functions, add fish linter and formatter

--- a/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
@@ -24,6 +24,10 @@ local sources = {
   -- Go
   b.formatting.goimports,
   b.formatting.gofumpt,
+  -- Fish
+  b.formatting.fish_indent,
+  b.diagnostics.fish,
+  
 }
 
 null_ls.setup {
