--- a/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
@@ -37,7 +37,7 @@ M.mason = {
     -- python stuff
     "pyright",
     "ruff_lsp",
-    "black",
+    "ruff",
     "reorder_python_imports",
 
     -- bash stuff
