Add .config/alacritty/alacritty.yml Update .config/nvim/lua/custom/configs/null-ls.lua Update .config/nvim/lua/custom/configs/overrides.lua Update .config/starship.toml

--- a/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
@@ -35,6 +35,8 @@ local sources = {
   -- Fish
   b.formatting.fish_indent,
   b.diagnostics.fish,
+  -- TOML
+  b.formatting.taplo,
 }
 
 null_ls.setup {
