Update .config/alacritty/alacritty.yml Update .config/ctpv/config Update .config/lf/lfrc Update .config/pdm/config.toml Update .config/fish/config.fish Update .config/fish/fish_plugins

--- a/dot_config/alacritty/alacritty.yml.tmpl
+++ b/dot_config/alacritty/alacritty.yml.tmpl
@@ -1,5 +1,9 @@
 shell:
   program: /usr/bin/fish
+  args:
+    - -l
+    - -c
+    - "tmux attach || tmux"
 # Colors (Snazzy)
 colors:
   # Default colors
