--- a/dot_config/tmux/tmux.conf.local.tmpl
+++ b/dot_config/tmux/tmux.conf.local.tmpl
@@ -374,7 +374,7 @@ tmux_conf_copy_to_os_clipboard=false
 # bind c new-window -c '#{pane_current_path}' #!important
 
 # move status line to top
-#set -g status-position top
+set -g status-position top
 # default shell
 {{ if eq .chezmoi.os "darwin" }}
 set -g default-shell /opt/homebrew/bin/fish
