--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -1,25 +1,25 @@
 ## Syntax Highlighting Colors
-set -g fish_color_autosuggestion '555'  'brblack'
-set -g fish_color_cancel -r
-set -g fish_color_command --bold
-set -g fish_color_comment red
-set -g fish_color_cwd green
-set -g fish_color_cwd_root red
-set -g fish_color_end brmagenta
-set -g fish_color_error brred
-set -g fish_color_escape 'bryellow'  '--bold'
-set -g fish_color_history_current --bold
-set -g fish_color_host normal
-set -g fish_color_match --background=brblue
-set -g fish_color_normal normal
-set -g fish_color_operator bryellow
-set -g fish_color_param cyan
-set -g fish_color_quote yellow
-set -g fish_color_redirection brblue
-set -g fish_color_search_match 'bryellow'  '--background=brblack'
-set -g fish_color_selection 'white'  '--bold'  '--background=brblack'
-set -g fish_color_user brgreen
-set -g fish_color_valid_path --underline
+set -gx fish_color_autosuggestion '555'  'brblack'
+set -gx fish_color_cancel -r
+set -gx fish_color_command --bold
+set -gx fish_color_comment red
+set -gx fish_color_cwd green
+set -gx fish_color_cwd_root red
+set -gx fish_color_end brmagenta
+set -gx fish_color_error brred
+set -gx fish_color_escape 'bryellow'  '--bold'
+set -gx fish_color_history_current --bold
+set -gx fish_color_host normal
+set -gx fish_color_match --background=brblue
+set -gx fish_color_normal normal
+set -gx fish_color_operator bryellow
+set -gx fish_color_param cyan
+set -gx fish_color_quote yellow
+set -gx fish_color_redirection brblue
+set -gx fish_color_search_match 'bryellow'  '--background=brblack'
+set -gx fish_color_selection 'white'  '--bold'  '--background=brblack'
+set -gx fish_color_user brgreen
+set -gx fish_color_valid_path --underline
 
 set -gx EDITOR nvim
 set -gx VISUAL nvim
