tmux alacritty main session

--- a/dot_config/alacritty/alacritty.yml.tmpl
+++ b/dot_config/alacritty/alacritty.yml.tmpl
@@ -8,7 +8,7 @@ shell:
   args:
     - -l
     - -c
-    - "tmux attach || tmux"
+    - "tmux new -A -s main"
 # Colors (Snazzy)
 colors:
   # Default colors
