Replace yq with prettierd

--- a/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
@@ -16,7 +16,7 @@ local sources = {
   b.formatting.shfmt,
   b.code_actions.shellcheck,
   -- YAML
-  b.formatting.yq,
+  b.formatting.prettierd,
   -- Markdown
   b.formatting.remark,
   -- Docker
