--- a/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
@@ -49,7 +49,7 @@ M.mason = {
     "remark-cli",
 
     -- yaml stuff
-    "yq",
+    "prettierd",
     "yaml-language-server",
     {{- if eq .chezmoi.os "linux" }}
     -- docker stuff
