Add some pyright setting

--- a/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
@@ -46,4 +46,14 @@ lspconfig.pyright.setup {
   capabilities = capabilities,
   on_attach = on_attach,
   filetypes = { "python" },
+  settings = {
+      python = {
+          analysis = {
+            autoSearchPaths = true,
+            diagnosticMode = "openFilesOnly",
+            useLibraryCodeForTypes = true,
+            typeCheckingMode = "basis",
+          }
+      }
+  },
 }
