Delete go stuff, replace md stuff with prettierd, delete luacheck

--- a/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
@@ -8,22 +8,16 @@ local sources = {
 
   -- Lua
   b.formatting.stylua,
-  b.diagnostics.luacheck,
   -- Python
   b.formatting.ruff_format,
   b.formatting.reorder_python_imports,
   -- Bash
   b.formatting.shfmt,
   b.code_actions.shellcheck,
-  -- YAML
+  -- YAML, Markdown
   b.formatting.prettierd,
-  -- Markdown
-  b.formatting.remark,
   -- Docker
   b.diagnostics.hadolint,
-  -- Go
-  b.formatting.goimports,
-  b.formatting.gofumpt,
   -- TOML
   b.formatting.taplo,
 }
