--- a/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
@@ -31,9 +31,9 @@ M.mason = {
 
     -- python stuff
     "pyright",
-    "ruff_lsp",
+    "ruff-lsp",
     "ruff",
-    "reorder_python_imports",
+    "reorder-python-imports",
 
     -- bash stuff
     "bash-language-server",
@@ -47,7 +47,7 @@ M.mason = {
     -- docker stuff
     "hadolint",
     "docker-compose-language-service",
-    "docker_language_server",
+    "docker-language-server",
     {{- end }}
 
     -- toml stuff
