--- a/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
@@ -47,7 +47,7 @@ M.mason = {
     -- docker stuff
     "hadolint",
     "docker-compose-language-service",
-    "docker-language-server",
+    "dockerfile-language-server",
     {{- end }}
 
     -- toml stuff
