--- a/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
@@ -14,7 +14,7 @@ M.treesitter = {
     "jsonc",
     "bash",
     "fish",
-    "gitignore".
+    "gitignore",
   },
   indent = {
     enable = true,
