Replace reorder-python-imports with ruff code action

--- a/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
@@ -33,6 +33,7 @@ lspconfig.ruff_lsp.setup {
           "--select=ARG",
           "--select=F",
           "--select=E",
+          "--select=I001",
         },
       },
     },
