Update .chezmoiignore Add .config/code-flags.conf Add .config/electron-flags.conf Add .config/electron25-flags.conf

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -3,6 +3,9 @@
 .config/fish/functions/up.fish
 .config/fish/functions/wg-down.fish
 .config/fish/functions/wg-up.fish
+.config/code-flags.conf
+.config/electron-flags.conf
+.config/electron25-flags.conf
 .bashrc
 {{ end }}
 README.md
