--- a/dot_condarc.tmpl
+++ b/dot_condarc.tmpl
@@ -1,10 +1,9 @@
 channels:
   - conda-forge
-auto_activate_base: false
+  - nodefaults
 env_prompt: ''
+channel_priority: strict
 {{ if eq .chezmoi.os "linux" }}
 pkgs_dirs:
   - /data/.cache/conda/pkgs
 {{ end -}}
-
-solver: libmamba
