--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -53,20 +53,18 @@ end
 starship init fish | source
 
 {{- if eq .chezmoi.os "linux" }}
-if test -f /home/fissium/tools/miniforge3/bin/conda
-    eval /home/fissium/tools/miniforge3/bin/conda "shell.fish" "hook" $argv | source
-end
-
-if test -f "/home/fissium/tools/miniforge3/etc/fish/conf.d/mamba.fish"
-    source "/home/fissium/tools/miniforge3/etc/fish/conf.d/mamba.fish"
-end
+# >>> mamba initialize >>>
+# !! Contents within this block are managed by 'mamba init' !!
+set -gx MAMBA_EXE "/home/fissium/.local/bin/micromamba"
+set -gx MAMBA_ROOT_PREFIX "/home/fissium/.config/micromamba"
+$MAMBA_EXE shell hook --shell fish --root-prefix $MAMBA_ROOT_PREFIX | source
+# <<< mamba initialize <<<
 {{- end }}
 {{- if eq .chezmoi.os "darwin" }}
-if test -f /Users/fissium/tools/miniforge3/bin/conda
-    eval /Users/fissium/tools/miniforge3/bin/conda "shell.fish" "hook" $argv | source
-end
-
-if test -f "/Users/fissium/tools/miniforge3/etc/fish/conf.d/mamba.fish"
-    source "/Users/fissium/tools/miniforge3/etc/fish/conf.d/mamba.fish"
-end
+# >>> mamba initialize >>>
+# !! Contents within this block are managed by 'mamba init' !!
+set -gx MAMBA_EXE "/Users/fissium/.local/bin/micromamba"
+set -gx MAMBA_ROOT_PREFIX "/Users/fissium/.config/micromamba"
+$MAMBA_EXE shell hook --shell fish --root-prefix $MAMBA_ROOT_PREFIX | source
+# <<< mamba initialize <<<
 {{- end }}
