Update .config/nvim/lua/custom/configs/lspconfig.lua Update .config/nvim/lua/custom/configs/null-ls.lua Update .config/Code - OSS/User/settings.json Update Library/Application Support/Code/User/settings.json

--- a/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/lspconfig.lua.tmpl
@@ -30,10 +30,8 @@ lspconfig.ruff_lsp.setup {
       -- Any extra CLI arguments for `ruff` go here.
       lint = {
         args = {
-          "--select=ARG",
-          "--select=F",
-          "--select=E",
-          "--select=I001",
+          "--select=ARG,F,E,I001",
+          "--line-length=88",
         },
       },
     },
