Update .config/nvim/lua/custom/configs/lspconfig.lua Update .config/nvim/lua/custom/configs/null-ls.lua Update .config/nvim/lua/custom/configs/overrides.lua Add .config/yamlfmt/.yamlfmt

--- a/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/null-ls.lua.tmpl
@@ -12,9 +12,9 @@ local sources = {
   }),
   -- Bash
   b.formatting.shfmt,
-  b.code_actions.shellcheck,
+  b.diagnostics.shellcheck,
   -- YAML, Markdown
-  b.formatting.prettierd,
+  b.formatting.yamlfmt,
   -- Docker
   b.diagnostics.hadolint,
   -- TOML
