--- a/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
+++ b/dot_config/nvim/lua/custom/configs/overrides.lua.tmpl
@@ -41,7 +41,7 @@ M.mason = {
     "shfmt",
     
     -- yaml, markdown stuff
-    "prettierd",
+    "yamlfmt",
     {{- if eq .chezmoi.os "linux" }}
     -- docker stuff
     "hadolint",
