Disable bold font in alacritty

--- a/dot_config/alacritty/alacritty.toml.tmpl
+++ b/dot_config/alacritty/alacritty.toml.tmpl
@@ -36,7 +36,7 @@ size = 14.0
 
 [font.bold]
 family = "FiraCode Nerd Font"
-style = "Bold"
+style = "Regular"
 
 [font.italic]
 family = "FiraCode Nerd Font"
