Tmux do not clear output history by C-l

--- a/dot_config/tmux/tmux.conf.local.tmpl
+++ b/dot_config/tmux/tmux.conf.local.tmpl
@@ -352,6 +352,9 @@ tmux_conf_copy_to_os_clipboard=false
 # -- user customizations -------------------------------------------------------
 # this is the place to override or undo settings
 
+# do not clear output history
+bind -n C-l send-keys C-l
+
 # increase history size
 #set -g history-limit 10000
 
@@ -410,10 +413,6 @@ tmux_conf_uninstall_plugins_on_reload=true
 
 # /!\ the tpm bindings differ slightly from upstream:
 #   - installing plugins: <prefix> + I
-#   - uninstalling plugins: <prefix> + Alt + u
-#   - updating plugins: <prefix> + u
-
-# /!\ do not add set -g @plugin 'tmux-plugins/tpm'
 # /!\ do not add run '~/.tmux/plugins/tpm/tpm'
 
 # to enable a plugin, use the 'set -g @plugin' syntax:
