Add OPENER env var

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -24,12 +24,14 @@ set -gx fish_color_valid_path --underline
 set -gx EDITOR nvim
 set -gx VISUAL nvim
 {{- if eq .chezmoi.os "darwin" }}
+set -gx OPENER open
 set -gx HOMEBREW_INSTALL_FROM_API 1
 set -gx CARGO_HOME /Users/fissium/Projects/rust/.cargo
 set -gx RUSTUP_HOME /Users/fissium/Projects/rust/.rustup
 set -gx GOPATH /Users/fissium/Projects/go
 {{- end }}
 {{- if eq .chezmoi.os "linux" }}
+set -gx OPENER xdg-open
 set -gx PIP_CACHE_DIR /data/.cache/pip
 set -gx HF_HOME /data/.cache/huggingface
 set -gx TORCH_HOME /data/.cache/torch
