--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -40,6 +40,8 @@ set -gx GOCACHE /data/.cache/go-build
 set -gx GOMODCACHE /projects/go/pkg/mod
 set -gx CARGO_HOME /projects/rust/.cargo
 set -gx RUSTUP_HOME /projects/rust/.rustup
+set -gx PRE_COMMIT_HOME /data/.cache/pre-commit
+set -gx PYRIGHT_PYTHON_CACHE_DIR /data/.cache
 {{- end }}
 set -g fish_greeting
 {{- if eq .chezmoi.os "darwin" }}
