Fix colors using tmux

--- a/dot_config/tmux/tmux.conf.local.tmpl
+++ b/dot_config/tmux/tmux.conf.local.tmpl
@@ -52,6 +52,8 @@ tmux_conf_new_pane_reconnect_ssh=false
 # to 'truecolor' or '24bit' or '$ tput colors' answering '16777216'
 # see https://github.com/termstandard/colors
 tmux_conf_24b_colour=auto
+set -g default-terminal xterm-256color
+set -g terminal-overrides ",alacritty:RGB"
 
 
 # -- theming -------------------------------------------------------------------
