--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -26,7 +26,7 @@ shell fish
 
 # BEGIN_FONTS
 font_family      FiraCode Nerd Font
-bold_font        auto
+bold_font        FiraCode Nerd Font Reg
 italic_font      auto
 bold_italic_font auto
 font_size        14.0
