--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -64,8 +64,8 @@ map kitty_mod+space next_layout
 # END CHANGE LAYOUT
 
 # START RESIZE PANE
-map ctrl+left resize_window narrower
-map ctrl+right resize_window wider
-map ctrl+up resize_window taller
-map ctrl+down resize_window shorter
+map kitty_mod+left resize_window narrower
+map kitty_mod+right resize_window wider
+map kitty_mod+up resize_window taller
+map kitty_mod+down resize_window shorter
 # END RESIZE PANE
