Kitty: move status bar to bottom

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -49,7 +49,7 @@ initial_window_height 35c
 {{- end }}
 
 # START TAB BAR
-tab_bar_edge top
+tab_bar_edge bottom
 # END TAB BAR
 
 # START VIM LIKE NAVIGATION
