Update .bashrc Update .config/kitty/kitty.conf Update .config/nvim/lua/myinit.lua Add .zshrc

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -20,7 +20,7 @@ macos_titlebar_color system
 shell /opt/homebrew/bin/fish
 {{ end -}}
 {{ if eq .chezmoi.os "linux" -}}
-shell fish
+shell zsh
 {{ end -}}
 # END_KITTY_SHELL
 
