--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -3,7 +3,12 @@ unsetopt beep
 # Emacs keys
 bindkey -e
 # Zinit 
+{{- if eq .chezmoi.os "darwin" }}
+ZINIT_HOME="/Users/$USER/.local/share/zinit/zinit.git"
+{{- end }}
+{{- if eq .chezmoi.os "linux" }}
 ZINIT_HOME="/home/$USER/.local/share/zinit/zinit.git"
+{{- end }}
 
 # ZSH COMPDUMP
 ZSH_COMPDUMP="${ZSH_CACHE_DIR}/.zcompdump-${HOST}-${ZSH_VERSION}"
@@ -70,3 +75,32 @@ alias lf="lfcd"
 
 # starship
 eval "$(starship init zsh)"
+
+{{- if eq .chezmoi.os "linux" }}
+# >>> mamba initialize >>>
+# !! Contents within this block are managed by 'mamba init' !!
+export MAMBA_EXE='/home/fissium/.local/bin/micromamba';
+export MAMBA_ROOT_PREFIX='/home/fissium/.config/micromamba';
+__mamba_setup="$("$MAMBA_EXE" shell hook --shell zsh --root-prefix "$MAMBA_ROOT_PREFIX" 2> /dev/null)"
+if [ $? -eq 0 ]; then
+    eval "$__mamba_setup"
+else
+    alias micromamba="$MAMBA_EXE"  # Fallback on help from mamba activate
+fi
+unset __mamba_setup
+# <<< mamba initialize <<<
+{{- end }}
+{{- if eq .chezmoi.os "darwin" }}
+# >>> mamba initialize >>>
+# !! Contents within this block are managed by 'mamba init' !!
+export MAMBA_EXE='/Users/fissium/.local/bin/micromamba';
+export MAMBA_ROOT_PREFIX='/Users/fissium/.config/micromamba';
+__mamba_setup="$("$MAMBA_EXE" shell hook --shell zsh --root-prefix "$MAMBA_ROOT_PREFIX" 2> /dev/null)"
+if [ $? -eq 0 ]; then
+    eval "$__mamba_setup"
+else
+    alias micromamba="$MAMBA_EXE"  # Fallback on help from mamba activate
+fi
+unset __mamba_setup
+# <<< mamba initialize <<<
+{{- end }}
