fix: fish to zsh

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -17,7 +17,7 @@ macos_titlebar_color system
 
 # BEGIN_KITTY_SHELL
 {{ if eq .chezmoi.os "darwin" -}}
-shell /opt/homebrew/bin/fish
+shell zsh
 {{ end -}}
 {{ if eq .chezmoi.os "linux" -}}
 shell zsh
