--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -2,6 +2,9 @@
 unsetopt beep
 # Emacs keys
 bindkey -e
+# Cycle history
+bindkey "^[[A" history-beginning-search-backward
+bindkey "^[[B" history-beginning-search-forward
 # Zinit 
 {{- if eq .chezmoi.os "darwin" }}
 ZINIT_HOME="/Users/$USER/.local/share/zinit/zinit.git"
