--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -1,6 +1,13 @@
+# default apps
 export EDITOR="nvim"
 export VISUAL="nvim"
 export ZSH_CACHE_DIR="${HOME}/.cache/zsh"
+
+# default folders
+export XDG_CONFIG_HOME="$HOME/.config"
+export XDG_DATA_HOME="$HOME/.local/share"
+export XDG_STATE_HOME="$HOME/.local/state"
+export XDG_CACHE_HOME="$HOME/.cache"
 
 {{- if eq .chezmoi.os "linux" }}
 export OPENER="xdg-open"
@@ -21,3 +28,12 @@ typeset -U path PATH
 path=($HOME/.local/bin /opt/homebrew/bin $GOPATH/bin $path)
 export PATH
 {{- end }}
+
+# set the localization
+export LC_ALL=en_US.UTF-8
+
+# cleaning up the home folder
+export ZDOTDIR="$XDG_CONFIG_HOME/zsh"
+
+# colors!
+export MANPAGER="nvim +Man!"
