--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -2,11 +2,24 @@
 [[ -r ${ZDOTDIR:-$HOME}/.zaliases ]] && source ${ZDOTDIR:-$HOME}/.zaliases
 
 # tab autocompletions
+{{- if eq .chezmoi.os "darwin" }}
+if type brew &>/dev/null
+then
+  FPATH="$(brew --prefix)/share/zsh/site-functions:${FPATH}"
+  autoload -Uz compinit
+  zstyle ':completion:*' menu select
+  zmodload zsh/complist
+  _comp_options+=(globdots)
+  compinit -d $XDG_CACHE_HOME/zsh/zcompdump-$ZSH_VERSION
+fi
+{{- end }}
+{{- if eq .chezmoi.os "linux" }}
 autoload -Uz compinit
 zstyle ':completion:*' menu select
 zmodload zsh/complist
 _comp_options+=(globdots)
 compinit -d $XDG_CACHE_HOME/zsh/zcompdump-$ZSH_VERSION
+{{- end }}
 
 # use vim keys in tab complete menu
 bindkey -M menuselect 'h' vi-backward-char
@@ -80,6 +93,14 @@ eval "$(starship init zsh)"
 
 # fzf in terminal, fzf must be installed to use this
 eval "$(fzf --zsh)"
+
+# fzf catppuccin theme
+export FZF_DEFAULT_OPTS=" \
+--color=bg+:#313244,bg:#1e1e2e,spinner:#f5e0dc,hl:#f38ba8 \
+--color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f5e0dc \
+--color=marker:#f5e0dc,fg+:#cdd6f4,prompt:#cba6f7,hl+:#f38ba8"
+
+{{- if eq .chezmoi.os "linux" }}
 # >>> mamba initialize >>>
 # !! Contents within this block are managed by 'mamba init' !!
 export MAMBA_EXE='/home/fissium/.local/bin/micromamba';
@@ -92,3 +113,18 @@ else
 fi
 unset __mamba_setup
 # <<< mamba initialize <<<
+{{- end }}
+{{- if eq .chezmoi.os "darwin" }}
+# >>> mamba initialize >>>
+# !! Contents within this block are managed by 'mamba init' !!
+export MAMBA_EXE='/Users/fissium/.local/bin/micromamba';
+export MAMBA_ROOT_PREFIX='/Users/fissium/.config/micromamba';
+__mamba_setup="$("$MAMBA_EXE" shell hook --shell zsh --root-prefix "$MAMBA_ROOT_PREFIX" 2> /dev/null)"
+if [ $? -eq 0 ]; then
+    eval "$__mamba_setup"
+else
+    alias micromamba="$MAMBA_EXE"  # Fallback on help from mamba activate
+fi
+unset __mamba_setup
+# <<< mamba initialize <<<
+{{- end }}
